k8s-manifests/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-webservices-new-stage
  labels:
    environment: staging
